# SecondReality

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json
.github/: copilot-instructions.md
.github/workflows/: build.yml
docs/: ALKU-PORT-STATUS.md  PROJECT.md
src/: CMakeLists.txt  main.c
src/audio/: CMakeLists.txt  audio.c  music.c  music.h  music_stub.c
src/core/: CMakeLists.txt  dis.c  dis.h  part.c  part.h  sokol.c  video.c  video.h
src/parts/alku/: CMakeLists.txt  alku.c  alku.h  alku_data.c  alku_data.h
